# noc-living-docs

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/project-living-docs/: SKILL.md  __init__.py  noc-skill.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: noc-check.yml  publish.yml  validate.yml
docs/: agent-compatibility.md  comparisons.md  release.md  v1-manual-dogfood.md  v1-readiness.md  why-noc.md
docs/migration-reports/: 2026-07-04-edm-ui.md  2026-07-04-edmpro3.md  2026-07-04-myspringboot.md  2026-07-04-noc-living-docs.md  TEMPLATE.md
docs/superpowers/plans/: 2026-07-08-agent-memory-router-tightening.md  2026-07-16-feature-archive-mvp.md
examples/domain-project/: README.md
examples/domain-project/noc_docs/: docs-map.md  project-status.md
examples/small-project/: AGENTS.md  README.md
examples/small-project/noc_docs/: docs-map.md
noc_docs/: docs-map.md  project-status.md
noc_docs/.living-docs/: config.json  docs-index.json  feature-map.json  manifest.json
noc_docs/development/: testing.md
noc_docs/features/: index.md
noc_docs/features/agent-protocol/: agent-guide.md  change-record.md  guardrails.md  notes.md  requirements.md  status.md  test-record.md
noc_docs/features/cli-core/: agent-guide.md  change-record.md  guardrails.md  notes.md  requirements.md  status.md  test-record.md
noc_docs/features/codex-skill/: agent-guide.md  change-record.md  guardrails.md  notes.md  requirements.md  status.md  test-record.md
noc_docs/features/init-index-validate/: agent-guide.md  change-record.md  guardrails.md  notes.md  requirements.md  status.md  test-record.md
noc_docs/features/release-quality/: agent-guide.md  change-record.md  guardrails.md  notes.md  requirements.md  status.md  test-record.md
protocol/: AGENT_PROTOCOL.md  CONFLICT_POLICY.md  DOCUMENT_STRUCTURE.md  LANGUAGE_POLICY.md  TOKEN_POLICY.md
scripts/: __init__.py  index-noc-docs.py  init-noc-docs.py  noc.py  release.py  validate-noc-docs.py
scripts/noclib/: __init__.py  candidates.py  evidence.py  feature_check.py  feature_update.py  features.py  indexes.py  layouts.py  migration.py  overview.py  schemas.py
skills/codex/project-living-docs/: SKILL.md  __init__.py
templates/: AGENTS.md  CLAUDE.md  GEMINI.md  __init__.py
templates/noc_docs/: docs-map.md
templates/noc_docs/.living-docs/: config.json  docs-index.json  feature-map.json  manifest.json
tests/: test_feature_archive_check.py  test_feature_archive_ensure.py  test_feature_archive_evidence.py  test_feature_archive_init.py  test_feature_archive_migration.py  test_feature_archive_routing.py  test_feature_archive_stage1.py  test_feature_archive_update.py  test_noc_cli.py  test_release_cli.py  test_setup_cli.py  test_simplified_memory.py
(+30 files in other folders)
