[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noc-living-docs"
version = "1.0.1"
description = "Small local CLI for keeping NOC living docs in sync with code changes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PolyForm Noncommercial License 1.0.0"}
authors = [
  {name = "SmallNoc"}
]
keywords = ["codex", "codex-skill", "agent-skills", "ai-coding", "agents-md", "living-docs", "developer-tools", "documentation", "cli", "git-hooks", "project-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
noc = "scripts.noc:main"

[tool.setuptools]
packages = ["scripts", "templates"]
py-modules = []

[tool.setuptools.package-data]
scripts = ["*.py"]
templates = ["**/*", "noc_docs/.living-docs/*"]
