[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "noc-living-docs"
version = "1.2.1"
description = "Small local CLI for keeping NOC living docs in sync with code changes."
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [
  {name = "SmallNoc"}
]
keywords = ["codex", "codex-skill", "agent-skills", "ai-coding", "agents-md", "living-docs", "developer-tools", "documentation", "cli", "git-hooks", "project-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/SmallNoc/noc-living-docs"
Source = "https://github.com/SmallNoc/noc-living-docs"
Issues = "https://github.com/SmallNoc/noc-living-docs/issues"

[project.scripts]
noc = "scripts.noc:main"

[tool.setuptools]
include-package-data = false
packages = ["scripts", "scripts.noclib", "templates", "noc_assets.project_living_docs"]

[tool.setuptools.package-dir]
"noc_assets.project_living_docs" = ".agents/skills/project-living-docs"

[tool.setuptools.package-data]
templates = ["*.md", "noc_docs/**/*.md", "noc_docs/**/*.json", "noc_docs/.living-docs/*.json"]
"noc_assets.project_living_docs" = ["*.md", "*.json", "references/*.md", "evals/*.csv"]
